--- a/html css inlämningsuppgift/index.html
+++ b/html css inlämningsuppgift/index.html
@@ -76,7 +76,7 @@
     <section class="page-3">
         <div class="feature-text">
             <h1>
-                Modern features included
+                Modern features included :)
             </h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
